fix: toggle icon visible on home menu reopening
Manage hasImage class imperatively in _updateMenuAppsIcon to ensure
it is removed when on home menu. Add CSS safety net to force SVG grid
opacity and transform when o_home_menu_background is active.

--- a/static/src/webclient/navbar/navbar.scss
+++ b/static/src/webclient/navbar/navbar.scss
@@ -41,10 +41,14 @@
     }
 }
 
-// When on home menu, hide brand elements inside toggle button
+// When on home menu, hide brand elements and force SVG grid visible
 .o_home_menu_background .o_menu_toggle {
     .o_menu_brand,
     .o_menu_brand_icon {
         display: none !important;
+    }
+    .o_menu_toggle_icon {
+        opacity: 1 !important;
+        transform: none !important;
     }
 }
